# udacity-dsnd-dashboard-project

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
python-package/: README.md  pyproject.toml  setup.py
python-package/employee_events/: __init__.py  employee.py  query_base.py  sql_execution.py  team.py
report/: dashboard.py  utils.py
report/base_components/: __init__.py  dropdown.py  radio.py
report/combined_components/: __init__.py
tests/: test_employee_events.py
